# cppBase

./: .gitignore  CMakeLists.txt  README.md
cpp-examples/3-cpp11/: CMakeLists.txt  example_copy_swap_idiom.cpp  example_shared_ptr_impl.cpp  example_unique_ptr_impl.cpp  example_use_forward.cpp
cpp-examples/3-cpp11/thread_test/: CMakeLists.txt
cpp-examples/protobuf_test/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  main.cpp  readme.md
cppBase/: CMakeLists.txt
cppBase/core/: iobuffer.h  logger.c  packet.h  singleton.h  syslog-nb.c
cppBase/redistool/: Redis.cpp  Redis.h  RedisManager.h  RedisRequest.h  redis 异步处理.drawio
cppBase/redistool/script/: audit_task.lua  get_tm_status.lua  on_tm_notify_update.lua  postponed_preempt_task.lua  preempt_tm_task.lua  set_tm_status.lua  stop_task.lua
cppBase/redistool/test/: CMakeLists.txt  main.cpp  test.lua
cppBase/utility/: AsyncTimer.cpp  lrucache.h  ptrutil.h  strutil.cpp  sysutil.cpp  sysutil.h  url_code.cpp  url_code.h  utils.h
cppBase/utility/test/: CMakeLists.txt  lrucache_test.cpp
example/: CMakeLists.txt  example_file.cpp  example_for_range.cpp  example_getIpPort_by_proxyId.cpp  example_hash.cpp  example_hash_2_file.cpp  example_md5.cpp  example_std_bind.cpp  example_test.cpp  example_test2.cpp  example_test3.cpp  in.txt  in_bak.txt  out.txt
example/batchWork/: BatchWorker.cpp  CMakeLists.txt  main.cpp
example/cpp11/: CMakeLists.txt  example_copy_swap_idiom.cpp  example_for_range.cpp  example_unique_ptr_impl.cpp  example_use_forward.cpp  shape.h
example/ffmpeg_3.4.7_examples/: CMakeLists.txt  README.md  example_avio_reading.c  example_decode_audio.c  example_encode_audio.c  example_encode_video.c  example_filter_audio.c  example_filtering_video.c  example_remuxing.c  example_transcoding.c  func.cpp
example/protobuf_test/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  main.cpp
example/smart_pointer/: CMakeLists.txt  main.cpp
example/smart_pointer/my_smart_pointer/: CMakeLists.txt  smartpoint.h
example/stl/: CMakeLists.txt  example_getopt.cpp  example_promise_future.cpp  example_queue.cpp  example_smart_ptr.cpp  example_std_bind.cpp  example_std_bind2.cpp  example_std_function.cpp  example_va_list.cpp
example/yy/: CMakeLists.txt  example_getIpPort_by_proxyId.cpp  example_hash.cpp  in.txt
muduo/: CMakeLists.txt  readme.md
muduo/base/: AsyncLogging.cc  AsyncLogging.h  BlockingQueue.h  CMakeLists.txt  CountDownLatch.cc  CountDownLatch.h  LogFile.h  LogStream.cc  LogStream.h  Logging.h  Mutex.h
muduo/base/reactor_test/: CMakeLists.txt
muduo/base/tests/: BoundedBlockingQueue_test.cc  CMakeLists.txt  FileUtil_test.cc  ThreadPool_test.cc
muduo/base/thread_test/: CMakeLists.txt  MutualDeadLock.cpp  MutualDeadLock_fix.cpp  NonRecursiveMutex_fix.cpp  NonRecursiveMutex_test.cpp  SelfDeadLock.cpp
muduo/examples/: CMakeLists.txt
muduo/examples/filetransfer/: download2.cc  download3.cc
muduo/examples/idleconnection/: echo.cc  echo.h
muduo/examples/muduo-udns/: CMakeLists.txt  Resolver.cc  Resolver.h  dns.cc
muduo/examples/protobuf/: CMakeLists.txt
muduo/examples/reactor_test/: CMakeLists.txt  README
muduo/examples/simple/: CMakeLists.txt
muduo/examples/sudoku/: 11_server_multiloop_threadpool.cc  CMakeLists.txt
muduo/examples/thread_test/: CMakeLists.txt
muduo/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Channel.h  Connector.h  EventLoop.cc  EventLoop.h  EventLoopThread.h  Poller.h  SocketsOps.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  TimerQueue.h
muduo/net/http/: CMakeLists.txt
project/async_cpp/: Bs2Client.cpp  Bs2Client.h  CMakeLists.txt  ISingleton.h  README.md  common.h  config.cpp  config.h  deploy.md  googleclient.cpp  googleclient.h  kafkaclient.cpp  kafkaclient.h  logger.cpp  logger.h  main.cpp  ossclient.cpp  ossclient.h  pictool.h  pushservice.cpp  pushservice.h  rabbitmqclient.cpp  rabbitmqclient.h  staticservice.cpp  staticservice.h  syslog-nb.c  syslog-nb.h  taskparams.cpp  taskparams.h  taskresult.h  util.h
project/async_cpp/ailib/: cover_qc_models_api.h  test.cpp
project/async_cpp/conf/: config.json
project/async_cpp/include/: MetricsApi.h  MetricsEx.cpp  MetricsEx.h  argsParser.h  common.h  int_types.h  logger.cpp  logger.h
project/async_cpp/json/: libjsoncpp.so.11
project/async_cpp/restclient/: connection.cc  connection.h  helpers.h  restclient.cc  restclient.h
project/design_pattern/: CMakeLists.txt
project/ffmpeg_tutorial/: CMakeLists.txt
project/ffmpeg_tutorial/Sdl2Test/: CMakeLists.txt  readme.md
project/ffmpeg_tutorial/basic/: CMakeLists.txt  simplest_mediadata_raw.cpp  simplest_mediadata_udp.cpp
project/ffmpeg_tutorial/basic_knowledge/: CMakeLists.txt  simplest_mediadata_aac.cpp  simplest_mediadata_flv.cpp  simplest_mediadata_h264.cpp  simplest_mediadata_main.cpp  simplest_mediadata_udp.cpp
project/ffmpeg_tutorial/ffmpeg_3.4.7_examples/: CMakeLists.txt  example_avio_dir_cmd.c  example_avio_reading.c  example_decode_video.c  example_demuxing_decoding.c  example_extract_mvs.c  example_filtering_audio.c  example_http_multiclient.c  example_hw_decode.c  example_metadata.c  example_muxing.c  example_qsvdec.c  example_resampling_audio.c  example_transcode_aac.c  example_transcoding.c
project/ffmpeg_tutorial/ffmpeg_test/: CMakeLists.txt  readme.md
project/ffmpeg_tutorial/tutorial01/: CMakeLists.txt  tutorial01.c
project/ffmpeg_tutorial/tutorial02/: CMakeLists.txt  simplest_ffmpeg_player.c  tutorial02.c  tutorial02.cpp
project/ffmpeg_tutorial/tutorial03/: CMakeLists.txt  Makefile  tutorial03.c  tutorial03.cpp  tutorial03_bak.cpp
project/ffmpeg_tutorial/tutorial04/: CMakeLists.txt  Makefile  tutorial04.cpp
project/ffmpeg_tutorial/tutorial05/: CMakeLists.txt  Makefile  tmp.cpp  tutorial05.cpp
project/ffmpeg_tutorial/tutorial06/: tutorial06.cpp
project/mediaproc_lib/: .gitignore  CMakeLists.txt  README.md  audiolib.thrift  build.sh  docker_build.sh  example.cpp  imagelib.thrift  makefile  videolib.thrift  workFlow.drawio
(+520 files in other folders)
