# 说明copy and swap idiom
add_example_target(copy_swap_idiom)

# 自己实现的unique_ptr
add_example_target(unique_ptr_impl)

# 实现shared_ptr
add_example_target(shared_ptr_impl)

# 完美转发 forward 说明
add_example_target(use_forward)

# auto 和 for range
add_example_target(for_range)

#
add_subdirectory(thread_test)