# Macro for add example target
macro(add_ffmpeg_target EXAMPLE_TARGET)
    add_executable("example_${EXAMPLE_TARGET}" "example_${EXAMPLE_TARGET}.c")
    target_link_libraries("example_${EXAMPLE_TARGET}" avdevice avfilter avformat avcodec swresample swscale avutil m)
endmacro(add_ffmpeg_target)

add_ffmpeg_target(avio_dir_cmd)
add_ffmpeg_target(avio_reading)
add_ffmpeg_target(decode_audio)
add_ffmpeg_target(decode_video)
add_ffmpeg_target(demuxing_decoding)
add_ffmpeg_target(encode_audio)
add_ffmpeg_target(encode_video)
add_ffmpeg_target(extract_mvs)
add_ffmpeg_target(filter_audio)
add_ffmpeg_target(filtering_audio)
add_ffmpeg_target(filtering_video)
add_ffmpeg_target(http_multiclient)
add_ffmpeg_target(hw_decode)
add_ffmpeg_target(metadata)
add_ffmpeg_target(muxing)
add_ffmpeg_target(qsvdec)
add_ffmpeg_target(remuxing)
add_ffmpeg_target(resampling_audio)
add_ffmpeg_target(scaling_video)
add_ffmpeg_target(transcode_aac)
add_ffmpeg_target(transcoding)