
# 创建型
add_subdirectory("creational_patterns/02simple_factory")
add_subdirectory("creational_patterns/03factory_method")
add_subdirectory("creational_patterns/04abstract_factory")
add_subdirectory("creational_patterns/05builder")

# 结构型
add_subdirectory("structural_patterns/01proxy")
add_subdirectory("structural_patterns/02bridge")
add_subdirectory("structural_patterns/03decorator")

# 行为型
