# 以下项目在Mac中运行
set(SDL_DIR /usr/local/Cellar/sdl2/2.0.16)
set(SDL_IMAGE_DIR /usr/local/Cellar/sdl2_image/2.0.5)
set(FFMPEG_DIR /usr/local/Cellar/ffmpeg/4.4_2)

add_subdirectory(Sdl2Test)
add_subdirectory(basic_knowledge)
add_subdirectory(ffmpeg_test)

add_subdirectory(tutorial_ffmpeg_sdl/tutorial01)
add_subdirectory(tutorial_ffmpeg_sdl/tutorial02)
add_subdirectory(tutorial_ffmpeg_sdl/tutorial03)
add_subdirectory(tutorial_ffmpeg_sdl/tutorial04)
add_subdirectory(tutorial_ffmpeg_sdl/tutorial05)
add_subdirectory(tutorial_ffmpeg_sdl/tutorial06)